# yhchat-sdk-rust

./: .gitignore  LICENSE  README.md
yhchat-sdk-core/: Cargo.toml
yhchat-sdk-core/src/: client.rs  constants.rs  event.rs  lib.rs  types.rs
yhchat-sdk-demo/: Cargo.toml  tests.rs
yhchat-sdk-demo/src/: main.rs
