[package]
name = "yhchat-sdk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
async-stream = "0.3"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"